# Rename-to-hash

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  rename.py  requirements.txt
benchmark/: README.md  fuzzy_rename.py
docs/: BENCHMARK.md  README.md  TODO.md
rname/: cfs.py  clog.py  hasher.py  rname.py
