[project]
name = "rename-files-to-hash"
version = "3"
description = "Single python file to rename all files in a directory to their hash sums."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = ["blake3>=1.0.4"]

[project.scripts]
rname = "rname.rname:main"
